macro ui done